ajout des projets sans les liens

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-    <title>Portfolio Template - Open source</title>
-    <meta name="title" content="Portfolio Template - Open source" />
+    <title>Portfolio Louis DENIS</title>
+    <meta name="title" content="Portfolio Louis DENIS" />
     <meta
       name="description"
-      content="Build or customize your portfolio website using this super easy template. Free to use if you are a member of the community or a contributor to this project"
     />
 
     <!-- Open Graph / Facebook -->
@@ -98,8 +97,8 @@
           </h1>
           <!-- Navbar links -->
           <ul class="nav-menu">
-            <li><a class="nav-link" href="#projects">PROJECTS</a></li>
-            <li><a class="nav-link" href="#">CONTACT</a></li>
+            <li><a class="nav-link" href="#projects">PROJETS</a></li>
+            <li><a class="nav-link" href="#contact">CONTACT</a></li>
             <li><a class="nav-link" href="#">BlOG</a></li>
             <li>
               <a
@@ -133,22 +132,22 @@
           src="assets/profile-image.svg"
           alt=""
         />
-        <h1>Hi I'm Franklin</h1>
+        <h1>Salut moi c'est Louis</h1>
 
         <div class="content-text">
-          <h2>Building digital</h2>
-          <h2>products, brands, and experience.</h2>
+          <h2>Developpeur web et applications lourdes</h2>
+          <h1>sites,application,solution technique et informatique</h1>
 
           <p>
-            A Frontend Developer and Visual Designer with experience in web
-            design, brand identity and product design.
+            Je suis un développeur principalement web et application bureau.
+            J'ai travaillé sur de gros projets 
           </p>
         </div>
         <a
-          href="https://github.com/CommunityPro/portfolio-html"
+          href="https://github.com/KobalaGlou"
           class="btn btn-secondary"
           target="_blank"
-          >Connect With Me</a
+          >Allez voir mon GitHub</a
         >
       </section>
     </header>
@@ -157,8 +156,9 @@
     <section id="projects" class="project-container container">
       <div class="division"></div>
       <div class="content-text">
-        <h2>Projects</h2>
-        <p>Check out some of my personal and paid projects</p>
+        <h2>Projets</h2>
+
+        <p>Voici quelques-uns de mes projets</p>
       </div>
 
       <article class="project">
@@ -166,8 +166,8 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project One</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Project Link Up</h3>
+              <p>PHP Laravel, Tailwind</p>
             </div>
 
             <div class="project-link">
@@ -181,8 +181,8 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Two</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Project SINC Web Assemblage</h3>
+              <p>Python Django, AngularJS, TypeScript</p>
             </div>
 
             <div class="project-link">
@@ -196,8 +196,8 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Three</h3>
-              <p>React, Redux, SASS</p>
+              <h3>Project Book Nook Media</h3>
+              <p>C#, Pomelo</p>
             </div>
 
             <div class="project-link">
@@ -207,60 +207,18 @@
           </div>
         </div>
 
-        <!-- Project 4 -->
-        <div href="" class="card">
-          <div class="project-info">
-            <div class="project-bio">
-              <h3>Project Four</h3>
-              <p>React, Redux, SASS</p>
-            </div>
+        
 
-            <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
-            </div>
-          </div>
-        </div>
+    </section id="contact" class="contact">
+      <a >Mail :louis.denis49@gmail.com</a>
+      <a >Tél :07 72 21 04 73</a>
+    <section >
 
-        <!-- Project 5 -->
-        <div href="" class="card">
-          <div class="project-info">
-            <div class="project-bio">
-              <h3>Project Five</h3>
-              <p>React, Redux, SASS</p>
-            </div>
-
-            <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project 6 -->
-        <div href="" class="card">
-          <div class="project-info">
-            <div class="project-bio">
-              <h3>Project Six</h3>
-              <p>React, Redux, SASS</p>
-            </div>
-
-            <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
-            </div>
-          </div>
-        </div>
-      </article>
-
-      <a href="#" class="btn btn-secondary"
-        target="_blank" >See More <i class="fas fa-arrow-right"></i
-      ></a>
     </section>
 
     <footer id="footer">
       <div class="container">
-        <a href="mailto:communitypro47@gmail.com">communitypro47@gmail.com</a>
+        <a >louis.denis49@gmail.com</a>
         <!-- Social links -->
         <div class="social">
           <a href="#" target="_blank"
@@ -277,20 +235,6 @@
         </div>
         <!-- Attribution -->
         <div class="attribution">
-          <a
-            href="https://github.com/CommunityPro/portfolio-html"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="https://user-images.githubusercontent.com/62628408/157202263-9174da24-b19a-4017-9b7c-a1d26ae8f014.svg"
-              alt="attribution"
-              width="150px"
-            />
-          </a>
-        </div>
-        <p>Copyright &copy; Communitypro <span id="datee"></span>, All rights reserved</p>
-      </div>
     </footer>
     <script src="js/script.js"></script>
   </body>
