--- a/src/index.html
+++ b/src/index.html
@@ -99,12 +99,12 @@
           <ul class="nav-menu">
             <li><a class="nav-link" href="#projects">PROJETS</a></li>
             <li><a class="nav-link" href="#contact">CONTACT</a></li>
-            <li><a class="nav-link" href="#">BlOG</a></li>
+            <li><a class="nav-link" href="#">A PROPOS DE MOIS</a></li>
             <li>
               <a
                 class="nav-link btn btn-primary"
-                href="https://github.com/CommunityPro/portfolio-html"
-                >RESUME <i class="fas fa-arrow-right"></i
+                href="https://github.com/KobalaGlou"
+                >MON GITHUB <i class="fas fa-arrow-right"></i
               ></a>
             </li>
 
@@ -136,7 +136,7 @@
 
         <div class="content-text">
           <h2>Developpeur web et applications lourdes</h2>
-          <h1>sites,application,solution technique et informatique</h1>
+          <h1>sites,applications,solutions techniques et informatiques</h1>
 
           <p>
             Je suis un développeur principalement web et application bureau.
@@ -171,7 +171,7 @@
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/KobalaGlou/LinkUp-Web" target="_blank"><i class="fab fa-github"></i></a>
               <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
@@ -186,7 +186,6 @@
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
               <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
@@ -201,7 +200,7 @@
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/Aurelien-Louis/C" target="_blank"><i class="fab fa-github"></i></a>
               <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
@@ -209,16 +208,12 @@
 
         
 
-    </section id="contact" class="contact">
-      <a >Mail :louis.denis49@gmail.com</a>
-      <a >Tél :07 72 21 04 73</a>
-    <section >
-
     </section>
 
     <footer id="footer">
       <div class="container">
-        <a >louis.denis49@gmail.com</a>
+        <a >Mail : louis.denis49@gmail.com</a>
+        <a >Tél : 07 72 21 04 73</a>
         <!-- Social links -->
         <div class="social">
           <a href="#" target="_blank"
