--- a/src/index.html
+++ b/src/index.html
@@ -86,13 +86,13 @@
         <div class="container">
           <!-- Logo -->
           <h1 id="logo">
-            <a href="https://github.com/CommunityPro/portfolio-html"
+            <a href="https://github.com/KobalaGlou/my-portfolio"
               ><img src="./assets/logo.png" alt="Your Logo"
             /></a>
           </h1>
           <!-- Navbar links -->
           <ul class="nav-menu">
-            <li><a class="nav-link" href="#experience">PARCOURS PROFESSIONNEL</a></li>
+            <li><a class="nav-link" href="#experience">EXPERIENCES PROFESSIONNELLES</a></li>
             <li><a class="nav-link" href="#projects">PROJETS</a></li>
             <li><a class="nav-link" href="#contact">CONTACT</a></li>
             <li><a class="nav-link" href="#about">A PROPOS DE MOI</a></li>
@@ -128,7 +128,7 @@
           <h1>sites, applications, solutions techniques et informatiques</h1>
           <p>
             Je suis un développeur principalement web et application bureau.
-            J'ai travaillé sur de gros projets
+            J'ai travaillé sur de gros projets en collaboration avec d'autres développeurs
           </p>
         </div>
         <a href="https://github.com/KobalaGlou" class="btn btn-secondary" target="_blank">Allez voir mon GitHub</a>
@@ -183,7 +183,7 @@
             </div>
             <div class="project-link">
               <a href="https://github.com/KobalaGlou/LinkUp-Web" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="pres_LU.html" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -195,7 +195,7 @@
               <p>Python Django, AngularJS, TypeScript</p>
             </div>
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="pres_SINC.html" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -208,7 +208,7 @@
             </div>
             <div class="project-link">
               <a href="https://github.com/Aurelien-Louis/C" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="pres_BNM.html" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
