patch bdd book nook

--- a/src/pres_BNM.html
+++ b/src/pres_BNM.html
@@ -46,7 +46,7 @@
 
     <section id="schema" class="container">
         <h2>Schéma de la Base de Données</h2>
-        <img src="assets/schema_bdd.png" alt="Schéma de la BDD" class="schema-img">
+        <img src="assets/pres_booknook/bdd.png" alt="Schéma de la BDD" class="schema-img">
         <p>
             La base de données finale a donc été modifiée jusqu’à obtenir ce résultat: <br>
             Un emprunteur possède un nom, un prénom, une date de naissance, un email et un numéro de portable. On peut également savoir si le compte a été validé et le token de validation. <br>
